--- a/mainMainPageCSS.css
+++ b/mainMainPageCSS.css
@@ -3,10 +3,31 @@
 	border: 0px;
 	padding-top: 50px;
 	padding-bottom: 10px;
-	border-bottom: 1px solid;
-	background: #1abfca;
+	background: black;
 	color: white;
 	height: 25px;
+	border-bottom: 1px solid #cccc00;
+}
+
+.header h1{
+	position: absolute;
+	top: 50px;
+	left: 260px;
+	transform: translate(-50%, -50%);
+	color: #ffff06;
+	padding: 0px;
+	margin: 0px;
+	border: 0px;
+	text-align: right;
+	font-weight: bold;
+	font-size: 50px;
+}
+
+#logo
+{
+	position: absolute;
+	top: 1px;
+	left: 10px;
 }
 
 .icon
@@ -19,17 +40,18 @@
 	position: absolute;
 	top: 300px;
 	left: 100px;
-	height: 33px;
+	height: 35px;
 	width: 300px;
+	background:none;
+	border: 1px solid #7cf481;
+	color: #7cf481;
 }
 
-.locButton
+::placeholder
 {
-	position: absolute;
-	top: 300px;
-	left: 410px;
-	height: 39px;
+	color: yellow;
 }
+
 
 #coolStuff
 {
@@ -45,27 +67,43 @@
 
 #byline
 {
-	color: #cccc00;
+	color: #eded4b;;
+}
+
+.locButton
+{
+	position: absolute;
+	top: 300px;
+	left: 410px;
+	height: 39px;
+	background: black;
+	border: 2px solid #000000;
+	cursor: pointer;
+	font-size: 18px;
+	color: #ffff84;
+}
+
+.locButton:hover
+{
+	border: 2px solid white;
 }
 
 .foodButton
 {
 	position: absolute;
+	background : black;
 	top: 300px;
-	left: 505px;
+	left: 500px;
 	height: 39px;
+	border: 2px solid black;
+	cursor: pointer;
+	font-size : 18px;
+	color: #ffff84;
 }
 
-.header h1{
-	position: absolute;
-	top: 50px;
-	left: 75px;
-	transform: translate(-50%, -50%);
-	color: black;
-	padding: 0px;
-	margin: 0px;
-	border: 0px;
-	text-align: right;
+.foodButton:hover
+{
+	border: 2px solid white;
 }
 
 .images
@@ -81,7 +119,7 @@ body
 	padding: 0px;
 	border: 0px;
 	margin: 0px;
-	height: 1000px;
+	height: 750px;
 	background-size: 100% 100%;
 }
 
@@ -92,7 +130,7 @@ body
 	left: 1250px;
 	cursor: pointer;
 	transform: translate(-50%, -50%);
-	color: black;
+	color: #7cf481;
 	padding: 0px;
 	margin: 0px; 
 	border: 0px;
@@ -105,7 +143,7 @@ body
 	top: 50px;
 	left: 1175px;
 	transform: translate(-50%, -50%);
-	color: black;
+	color: #7cf481;
 	padding: 0px;
 	margin: 0px;
 	border: 0px;
@@ -122,6 +160,7 @@ body
 	padding: 0px;
 	margin: 0px;
 	border: 0px;
+	color: #cccc00;
 }
 
 .loginbtn
@@ -156,6 +195,9 @@ body
 #video
 {
 	position: absolute;
-	left: 1000px;
-	top: 150px;
+	border: 0;
+	padding: 0;
+	margin: 0;
+	left: 1125px;
+	top: 55px;
 }
